--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="photo/camera.jpg" alt="Professional camera">
+                <img src="camera.jpg" alt="Professional camera">
             </div>
         </section>
 
@@ -230,5 +230,6 @@ document.getElementById('contactForm').addEventListener('submit', async function
 });
 </script>
 </body>
+
 
 </html>
